Fix Search box layout in IE

--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -136,6 +136,12 @@
     <Content Include="Assemblies\iView.ViewEngine.dll" />
     <Content Include="Assemblies\iView.ViewEngine.pdb" />
     <Content Include="Assemblies\iView.ViewEngine.xml" />
+    <Content Include="Content\css\control.css">
+      <DependentUpon>control.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\control.min.css">
+      <DependentUpon>control.css</DependentUpon>
+    </Content>
     <Content Include="Content\css\_helper.css">
       <DependentUpon>_helper.scss</DependentUpon>
     </Content>
@@ -155,6 +161,7 @@
     <Content Include="Content\img\login-header.png" />
     <Content Include="Content\img\old-phone.svg" />
     <Content Include="Content\img\scope.svg" />
+    <Content Include="Content\img\upload.svg" />
     <Content Include="Content\img\user.svg" />
     <Content Include="Content\js\page.js" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.css" />
@@ -164,6 +171,8 @@
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.js" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\lib\dropzone.css" />
+    <Content Include="Content\lib\dropzone.js" />
     <Content Include="Content\lib\jquery.svginject.js" />
     <Content Include="Content\lib\slick\ajax-loader.gif" />
     <Content Include="Content\lib\slick\fonts\slick.svg" />
@@ -961,6 +970,10 @@
     <Content Include="Content\lib\slick\slick-theme.css.map">
       <DependentUpon>slick-theme.css</DependentUpon>
     </Content>
+    <Content Include="Content\css\control.scss" />
+    <Content Include="Content\css\control.css.map">
+      <DependentUpon>control.css</DependentUpon>
+    </Content>
     <None Include="Content\Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.min.js" />
@@ -972,6 +985,7 @@
     <Content Include="iView\Contacts\ContactsAdd.html" />
     <Content Include="iView\Contacts\ContactsList.html" />
     <Content Include="iView\include\contactForm.html" />
+    <Content Include="iView\kitchensink\kitchensink.html" />
     <Content Include="iView\login\login.html" />
     <Content Include="iView\Rollcall\list.html" />
     <Content Include="iView\Rollcall\Rollcall.xml" />
@@ -999,6 +1013,7 @@
     <Content Include="Template\Default\Controls\panel\panel.html" />
     <Content Include="Template\Default\Controls\row\tr.html" />
     <Content Include="Template\Default\Controls\select\select.html" />
+    <Content Include="Template\Default\Controls\uploader\dropzone.html" />
     <Content Include="Template\Default\Controls\view\column.html" />
     <Content Include="Template\Default\Controls\view\row.html" />
     <Content Include="Template\Default\Controls\view\slik.html" />
