--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -184,13 +184,37 @@
     <Content Include="Content\font\OpenSans-Regular.svg" />
     <Content Include="Content\img\add-user.svg" />
     <Content Include="Content\img\address-book.svg" />
+    <Content Include="Content\img\area-graph.svg" />
+    <Content Include="Content\img\grid.svg" />
     <Content Include="Content\img\loading.gif" />
     <Content Include="Content\img\login-header.png" />
+    <Content Include="Content\img\office.svg" />
     <Content Include="Content\img\old-phone.svg" />
     <Content Include="Content\img\scope.svg" />
     <Content Include="Content\img\upload.svg" />
     <Content Include="Content\img\user.svg" />
+    <Content Include="Content\img\watch.svg" />
     <Content Include="Content\js\page.js" />
+    <Content Include="Content\lib\angular-datatables\angular-datatables.js" />
+    <Content Include="Content\lib\angular-datatables\angular-datatables.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\bootstrap\angular-datatables.bootstrap.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\bootstrap\angular-datatables.bootstrap.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\bootstrap\datatables.bootstrap.css" />
+    <Content Include="Content\lib\angular-datatables\plugins\bootstrap\datatables.bootstrap.min.css" />
+    <Content Include="Content\lib\angular-datatables\plugins\colreorder\angular-datatables.colreorder.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\colreorder\angular-datatables.colreorder.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\columnfilter\angular-datatables.columnfilter.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\columnfilter\angular-datatables.columnfilter.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\colvis\angular-datatables.colvis.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\colvis\angular-datatables.colvis.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\fixedcolumns\angular-datatables.fixedcolumns.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\fixedcolumns\angular-datatables.fixedcolumns.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\fixedheader\angular-datatables.fixedheader.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\fixedheader\angular-datatables.fixedheader.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\scroller\angular-datatables.scroller.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\scroller\angular-datatables.scroller.min.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\tabletools\angular-datatables.tabletools.js" />
+    <Content Include="Content\lib\angular-datatables\plugins\tabletools\angular-datatables.tabletools.min.js" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="Content\lib\bootstrap\css\bootstrap.css" />
@@ -198,9 +222,98 @@
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.js" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\lib\datatables\css\jquery.dataTables.css" />
+    <Content Include="Content\lib\datatables\css\jquery.dataTables.min.css" />
+    <Content Include="Content\lib\datatables\css\jquery.dataTables_themeroller.css" />
+    <Content Include="Content\lib\datatables\images\back_disabled.png" />
+    <Content Include="Content\lib\datatables\images\back_enabled.png" />
+    <Content Include="Content\lib\datatables\images\back_enabled_hover.png" />
+    <Content Include="Content\lib\datatables\images\favicon.ico" />
+    <Content Include="Content\lib\datatables\images\forward_disabled.png" />
+    <Content Include="Content\lib\datatables\images\forward_enabled.png" />
+    <Content Include="Content\lib\datatables\images\forward_enabled_hover.png" />
+    <Content Include="Content\lib\datatables\images\sort_asc.png" />
+    <Content Include="Content\lib\datatables\images\sort_asc_disabled.png" />
+    <Content Include="Content\lib\datatables\images\sort_both.png" />
+    <Content Include="Content\lib\datatables\images\sort_desc.png" />
+    <Content Include="Content\lib\datatables\images\sort_desc_disabled.png" />
+    <Content Include="Content\lib\datatables\js\jquery.dataTables.js" />
+    <Content Include="Content\lib\datatables\js\jquery.dataTables.min.js" />
+    <Content Include="Content\lib\datatables\js\jquery.js" />
+    <Content Include="Content\lib\datatables\unit_testing\controller.js" />
+    <Content Include="Content\lib\datatables\unit_testing\index.html" />
+    <Content Include="Content\lib\datatables\unit_testing\performance\draw.html" />
+    <Content Include="Content\lib\datatables\unit_testing\performance\page.html" />
+    <Content Include="Content\lib\datatables\unit_testing\performance\sort.html" />
+    <Content Include="Content\lib\datatables\unit_testing\tests\6776-scrolling-table-grows.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\-complex_header.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\-iDraw.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2512.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2530-2.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2530.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2569.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2600.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2608.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2635.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2746-stable-sort.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2799.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2840-restore-table-width.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\2914-state-save-sort.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\5396-fnUpdate-arrays-mData.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\5396-fnUpdate-arrays.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\5508-xscroll-zero-content.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\6776-scrolling-table-grows.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aaSorting.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aaSortingFixed.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.bSearchable.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.bSortable.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.bUseRendered.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.bVisible.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.bVisible2.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.fnRender.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.iDataSort.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.sClass.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.sName.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.sTitle.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoColumns.sWidth.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\aoSearchCols.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\asStripClasses.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bAutoWidth.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bFilter.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bInfiniteScroll.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bInfo.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bJQueryUI.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bLengthChange.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bPaginate.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bProcessing.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bServerSide.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bSort.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bSortCellsTop.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\bSortClasses.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnCookieCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnCreatedCell.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnCreatedRow.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnDeleteRow.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnDrawCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnFilter.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnFooterCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnHeaderCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnInfoCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnInitComplete.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnRowCallback.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnSetColumnVis.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\fnSetColumnVis2.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\gh-151.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\_getDataFunctions.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\_setDataFunctions.js" />
+    <Content Include="Content\lib\datatables\unit_testing\tests_onhold\1_dom\_zero_config.js" />
+    <Content Include="Content\lib\datetimepicker\css\bootstrap-datetimepicker.css" />
+    <Content Include="Content\lib\datetimepicker\css\bootstrap-datetimepicker.min.css" />
+    <Content Include="Content\lib\datetimepicker\js\bootstrap-datetimepicker.min.js" />
     <Content Include="Content\lib\dropzone.css" />
     <Content Include="Content\lib\dropzone.js" />
     <Content Include="Content\lib\jquery.svginject.js" />
+    <Content Include="Content\lib\moment.js" />
     <Content Include="Content\lib\slick\ajax-loader.gif" />
     <Content Include="Content\lib\slick\fonts\slick.svg" />
     <Content Include="Content\lib\slick\slick-theme.css" />
@@ -1007,6 +1120,27 @@
     <Content Include="Content\css\style.rtl.css.map">
       <DependentUpon>style.rtl.css</DependentUpon>
     </Content>
+    <Content Include="Content\lib\datatables\images\Sorting icons.psd" />
+    <Content Include="Content\lib\datatables\unit_testing\controller.php" />
+    <Content Include="Content\lib\datatables\unit_testing\data_sources\arrays.php" />
+    <Content Include="Content\lib\datatables\unit_testing\data_sources\method.php" />
+    <Content Include="Content\lib\datatables\unit_testing\data_sources\objects.php" />
+    <Content Include="Content\lib\datatables\unit_testing\data_sources\param.php" />
+    <Content Include="Content\lib\datatables\unit_testing\performance\large.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\-complex_header.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\2512.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\6776.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\complex_header_2.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\deferred_table.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\dom_data.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\dom_data_th.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\dom_data_two_headers.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\dymanic_table.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\empty_table.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\html_table.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\js_data.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\js_data_mixed_types.php" />
+    <Content Include="Content\lib\datatables\unit_testing\templates\two_tables.php" />
     <None Include="Content\Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.min.js" />
@@ -1031,7 +1165,10 @@
     <Content Include="Template\Default\Controls\button\submit.html" />
     <Content Include="Template\Default\Controls\checkbox\checkbox.html" />
     <Content Include="Template\Default\Controls\column\td.html" />
+    <Content Include="Template\Default\Controls\datepicker\date.html" />
+    <Content Include="Template\Default\Controls\datepicker\time.html" />
     <Content Include="Template\Default\Controls\form\form.html" />
+    <Content Include="Template\Default\Controls\grid\datatables.html" />
     <Content Include="Template\Default\Controls\grid\table.html" />
     <Content Include="Template\Default\Controls\icon\svg.html" />
     <Content Include="Template\Default\Controls\input\password.html" />
