--- a/iWork.Core/iWork.Core.vbproj
+++ b/iWork.Core/iWork.Core.vbproj
@@ -49,21 +49,6 @@
     <Reference Include="AutoMapper.Net4">
       <HintPath>..\packages\AutoMapper.3.3.0\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Core">
-      <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Facilities.Logging">
-      <HintPath>..\packages\Castle.LoggingFacility.3.3.0\lib\net45\Castle.Facilities.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Services.Logging.Log4netIntegration">
-      <HintPath>..\packages\Castle.Core-log4net.3.3.0\lib\net45\Castle.Services.Logging.Log4netIntegration.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Windsor">
-      <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
-    </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
@@ -84,10 +69,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper.vb" />
-    <Compile Include="IoC\Application.vb" />
-    <Compile Include="IoC\BaseInstaller.vb" />
-    <Compile Include="IoC\Installer.vb" />
+    <Compile Include="ApplicationConfuration.vb" />
+    <Compile Include="Mapper.vb" />
+    <Compile Include="Interfaces\IApplication.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -103,10 +87,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Repository\IGenericRepository.vb" />
-    <Compile Include="Repository\IRepository.vb" />
-    <Compile Include="Repository\IUnitOfWork.vb" />
-    <Compile Include="Service\IService.vb" />
+    <Compile Include="Interfaces\IGenericRepository.vb" />
+    <Compile Include="Interfaces\IRepository.vb" />
+    <Compile Include="Interfaces\IUnitOfWork.vb" />
+    <Compile Include="Interfaces\IService.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
