Update angular to last version 1.4

--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -192,6 +192,77 @@
     <Content Include="Content\lib\angular-datatables\plugins\scroller\angular-datatables.scroller.min.js" />
     <Content Include="Content\lib\angular-datatables\plugins\tabletools\angular-datatables.tabletools.js" />
     <Content Include="Content\lib\angular-datatables\plugins\tabletools\angular-datatables.tabletools.min.js" />
+    <Content Include="Content\lib\angular-strap\angular-strap.js" />
+    <Content Include="Content\lib\angular-strap\angular-strap.min.js" />
+    <Content Include="Content\lib\angular-strap\angular-strap.tpl.js" />
+    <Content Include="Content\lib\angular-strap\angular-strap.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\affix.js" />
+    <Content Include="Content\lib\angular-strap\modules\affix.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\alert.js" />
+    <Content Include="Content\lib\angular-strap\modules\alert.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\alert.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\alert.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\aside.js" />
+    <Content Include="Content\lib\angular-strap\modules\aside.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\aside.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\aside.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\button.js" />
+    <Content Include="Content\lib\angular-strap\modules\button.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\collapse.js" />
+    <Content Include="Content\lib\angular-strap\modules\collapse.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\date-formatter.js" />
+    <Content Include="Content\lib\angular-strap\modules\date-formatter.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\date-parser.js" />
+    <Content Include="Content\lib\angular-strap\modules\date-parser.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\datepicker.js" />
+    <Content Include="Content\lib\angular-strap\modules\datepicker.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\datepicker.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\datepicker.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\debounce.js" />
+    <Content Include="Content\lib\angular-strap\modules\debounce.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\dimensions.js" />
+    <Content Include="Content\lib\angular-strap\modules\dimensions.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\dropdown.js" />
+    <Content Include="Content\lib\angular-strap\modules\dropdown.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\dropdown.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\dropdown.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\modal.js" />
+    <Content Include="Content\lib\angular-strap\modules\modal.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\modal.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\modal.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\navbar.js" />
+    <Content Include="Content\lib\angular-strap\modules\navbar.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\parse-options.js" />
+    <Content Include="Content\lib\angular-strap\modules\parse-options.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\popover.js" />
+    <Content Include="Content\lib\angular-strap\modules\popover.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\popover.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\popover.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\raf.js" />
+    <Content Include="Content\lib\angular-strap\modules\raf.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\scrollspy.js" />
+    <Content Include="Content\lib\angular-strap\modules\scrollspy.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\select.js" />
+    <Content Include="Content\lib\angular-strap\modules\select.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\select.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\select.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\tab.js" />
+    <Content Include="Content\lib\angular-strap\modules\tab.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\tab.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\tab.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\timepicker.js" />
+    <Content Include="Content\lib\angular-strap\modules\timepicker.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\timepicker.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\timepicker.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\tooltip.js" />
+    <Content Include="Content\lib\angular-strap\modules\tooltip.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\tooltip.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\tooltip.tpl.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\typeahead.js" />
+    <Content Include="Content\lib\angular-strap\modules\typeahead.min.js" />
+    <Content Include="Content\lib\angular-strap\modules\typeahead.tpl.js" />
+    <Content Include="Content\lib\angular-strap\modules\typeahead.tpl.min.js" />
+    <Content Include="Content\lib\angular\angular-bootstrap-switch.js" />
     <Content Include="Content\lib\bootstrap-switch\css\bootstrap-switch.css" />
     <Content Include="Content\lib\bootstrap-switch\css\bootstrap-switch.min.css" />
     <Content Include="Content\lib\bootstrap-switch\js\bootstrap-switch.js" />
@@ -221,9 +292,6 @@
     <Content Include="Content\lib\datatables\js\jquery.dataTables.js" />
     <Content Include="Content\lib\datatables\js\jquery.dataTables.min.js" />
     <Content Include="Content\lib\datatables\js\jquery.js" />
-    <Content Include="Content\lib\datetimepicker\css\bootstrap-datetimepicker.css" />
-    <Content Include="Content\lib\datetimepicker\css\bootstrap-datetimepicker.min.css" />
-    <Content Include="Content\lib\datetimepicker\js\bootstrap-datetimepicker.min.js" />
     <Content Include="Content\lib\dropzone\dropzone.css" />
     <Content Include="Content\lib\dropzone\dropzone.js" />
     <Content Include="Content\lib\jquery.svginject.js" />
@@ -296,6 +364,29 @@
     <Content Include="Content\lib\magicsugges\composer.json" />
     <Content Include="Content\lib\magicsugges\magicsuggest.jquery.json" />
     <Content Include="Content\lib\magicsugges\README.md" />
+    <Content Include="Content\lib\angular-strap\angular-strap.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\affix.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\alert.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\aside.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\button.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\collapse.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\date-formatter.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\date-parser.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\datepicker.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\debounce.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\dimensions.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\dropdown.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\modal.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\navbar.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\parse-options.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\popover.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\raf.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\scrollspy.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\select.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\tab.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\timepicker.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\tooltip.min.js.map" />
+    <Content Include="Content\lib\angular-strap\modules\typeahead.min.js.map" />
     <None Include="Content\sample_data\grid.json" />
     <Content Include="Content\lib\angular\angular.min.js" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.css.map" />
@@ -336,6 +427,7 @@
     <Content Include="iView\Contacts\form.html" />
     <Content Include="iView\Contacts\list.html" />
     <Content Include="iView\include\contactForm.html" />
+    <Content Include="iView\kitchensink\angularstrap.html" />
     <Content Include="iView\kitchensink\form-validation.html" />
     <Content Include="iView\kitchensink\form.html" />
     <Content Include="iView\kitchensink\grid-ajax.html" />
