--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -5,16 +5,14 @@
   <properties>
     <connectionString>iWorkEntities</connectionString>
   </properties>
-
   <components>
-    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="thread">
+    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="scoped">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
     </component>
-    <component id="aaa" type="iWork.Core.Web.AuthorizationInterceptor, iWork.Core.Web" lifestyle="thread">
-      
-    </component>
-    <!--<component id="Service" service="iWork.Core.IService, iWork.Core" lifestyle="thread" />-->
+    <component type="System.Web.Http.Controllers.IHttpController, System.Web.Http" lifestyle="scoped" />
+    <component type="iWork.Core.Web.ServiceContainer, iWork.Core.Web" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="scoped" />
+    <component type="iWork.Core.Web.AuthorizationInterceptor, iWork.Core.Web" lifestyle="thread" />
   </components>
 </configuration>
