--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -3,7 +3,10 @@
   <configSections>
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
+  <appSettings>
+    <add key="owin:appStartup" value="StartupConfiguration" />
+  </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -11,8 +14,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
@@ -36,7 +39,6 @@
   <system.webServer>
     <modules>
       <add name="iViewHttpModule" type="iView.ViewEngine.iViewHttpModule, iView.ViewEngine" />
-      <add name="IoC" type="iWork.Core.Web.IoCHttpModule, iWork.Core.Web" />
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
@@ -54,4 +56,20 @@
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
   </glimpse>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
