--- a/iWork.Core.Web/iWork.Core.Web.vbproj
+++ b/iWork.Core.Web/iWork.Core.Web.vbproj
@@ -49,21 +49,33 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\packages\Microsoft.Owin.3.0.0\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.3.0.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.Owin">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.WebHost, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -86,18 +98,15 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IoC\Application.vb" />
-    <Compile Include="IoC\Installer\ApplicationInstaller.vb" />
-    <Compile Include="IoC\Installer\RepositoryInstaller.vb" />
-    <Compile Include="IoC\Installer\ServiceInstaller.vb" />
-    <Compile Include="IoC\Installer\UnitOfWorkInstaller.vb" />
     <Compile Include="Controller\BaseController.vb" />
     <Compile Include="Controller\IController.vb" />
-    <Compile Include="Controller\RequestIdModel.vb" />
-    <Compile Include="Controller\RequestModel.vb" />
-    <Compile Include="Controller\RequestResponseModel.vb" />
-    <Compile Include="Controller\ResponseModel.vb" />
-    <Compile Include="IoC\HttpModule\IoCHttpModule.vb" />
+    <Compile Include="IoC\ServiceContainer.vb" />
+    <Compile Include="Models\RequestIdModel.vb" />
+    <Compile Include="Models\RequestModel.vb" />
+    <Compile Include="Models\RequestResponseModel.vb" />
+    <Compile Include="Models\ResponseModel.vb" />
+    <Compile Include="IoC\Extentions.vb" />
+    <Compile Include="IoC\Startup.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -115,7 +124,6 @@
     </Compile>
     <Compile Include="IoC\DependencyResolver.vb" />
     <Compile Include="IoC\DependencyScope.vb" />
-    <Compile Include="IoC\Installer\ControllerInstaller.vb" />
     <Compile Include="Security\AuthorizationInterceptor.vb" />
     <Compile Include="Security\AuthorizeAttribute.vb" />
   </ItemGroup>
@@ -128,6 +136,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
