--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -12,7 +12,7 @@
       </parameters>
     </component>
     <component type="System.Web.Http.Controllers.IHttpController, System.Web.Http" lifestyle="scoped" />
-    <component type="iWork.Core.Web.ServiceContainer, iWork.Core.Web" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="scoped" />
-    <component type="iWork.Core.Web.AuthorizationInterceptor, iWork.Core.Web" lifestyle="thread" />
+    <component type="iWork.Core.ServiceContainer, iWork.Core" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="scoped" />
+    <component type="iWork.Core.AuthorizationInterceptor, iWork.Core" lifestyle="thread" />
   </components>
 </configuration>
